@@ -313,6 +313,36 @@ range|:
 name|buToCopy
 control|)
 block|{
+name|byte
+index|[]
+name|val
+init|=
+name|bo
+operator|.
+name|getValue
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|val
+operator|==
+literal|null
+condition|)
+block|{
+comment|// Presume a delete is intended.
+name|this
+operator|.
+name|delete
+argument_list|(
+name|bo
+operator|.
+name|getColumn
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
 name|this
 operator|.
 name|put
@@ -322,12 +352,10 @@ operator|.
 name|getColumn
 argument_list|()
 argument_list|,
-name|bo
-operator|.
-name|getValue
-argument_list|()
+name|val
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 block|}
 comment|/**    * Initialize a BatchUpdate operation on a row with a specific timestamp.    *     * @param row    * @param timestamp    */
